bootstrap/cluster-resources/in-cluster/argoingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-dashboard
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.5.201
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.example.com`)
      services:
        - kind: TraefikService
          name: argo-dashboard
